# ABDSimplyJuno106

./: .gitignore  CMakeLists.txt  CONTROL_FILESCODE202512311201.txt  README.md  TOTALCODE202512311201.txt  build_standalone.bat  bundle_code.ps1
Source/Core/: FactoryPresets.h  JunoSysEx.h  JunoTapeDecoder.cpp  JunoTapeDecoder.h  JunoVoiceManager.cpp  JunoVoiceManager.h  MidiLearnHandler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SynthParams.h
Source/Synth/: JunoADSR.cpp  JunoADSR.h  JunoDCO.cpp  JunoDCO.h  JunoLFO.cpp  JunoLFO.h  Voice.cpp  Voice.h
Source/UI/: JunoBender.cpp  JunoBender.h  JunoUIHelpers.h  PresetBrowser.cpp  PresetBrowser.h
Source/UI/Sections/: JunoChorusSection.h  JunoControlSection.h  JunoDCOSection.h  JunoENVSection.h  JunoHPFSection.h  JunoLFOSection.h  JunoVCASection.h  JunoVCFSection.h
